# shu-net-keeper

./: Cargo.toml  README.md  gen_icon.py
.github/workflows/: rust.yml  tauri.yml
src/: constants.rs  error.rs  rsa.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-windows-gui/: Cargo.toml  build.rs
src-windows-gui/src/: main.rs
src/config/: mod.rs
src/core/: email.rs  login.rs  network.rs
ui/: index.html
