[package]
name = "shu-net-keeper-windows-gui"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[[bin]]
name = "shu-net-keeper-windows-gui"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
dirs = "6"
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "tokio"] }
muda = "0.15"
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shu-net-keeper = { path = ".." }
tray-icon = "0.19"
winreg = "0.55"

[build-dependencies]
winresource = "0.1"
